src/objects/VIN__c.object
<CustomObject>
    <fields>
        <fullName>Air_Condition__c</fullName>
        <formula>Product__r.Air_Condition__c</formula>
        <label>Air Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COLOUR_CDE__c</fullName>
        <label>Colour Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cylinders__c</fullName>
        <formula>Product__r.Cylinders__c</formula>
        <label>Cylinders</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Door_Type__c</fullName>
        <formula>Product__r.Door_Type__c</formula>
        <label>Door Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drive_Train__c</fullName>
        <formula>Product__r.Drive_Train__c</formula>
        <label>Drive Train</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENGINE_NBR__c</fullName>
        <label>Engine Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INVC_DT__c</fullName>
        <label>Invoice date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Immobilizer_Indicator__c</fullName>
        <formula>Product__r.Immobilizer_Indicator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Immobilizer Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Grade_Code__c</fullName>
        <formula>Product__r.Model_Grade_Code__c</formula>
        <label>Model Grade Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Group_Code__c</fullName>
        <formula>Product__r.Model_Group_Code__c</formula>
        <label>Model Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Group__c</fullName>
        <formula>Product__r.Model_Group__c</formula>
        <label>Model Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <formula>Product__r.Model_Year__c</formula>
        <label>Model Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motive_Power__c</fullName>
        <formula>Product__r.Motive_Power__c</formula>
        <label>Motive Power</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLastUpdateDate__c</fullName>
        <label>ProductLastUpdateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ProductLastUpdateUser__c</fullName>
        <label>ProductLastUpdateUser</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSerialNumber__c</fullName>
        <externalId>true</externalId>
        <label>VIN/Serial #</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProductValue__c</fullName>
        <description>MDM field that we are not displaying to the end users.</description>
        <label>ProductValue</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_DELETE__c</fullName>
        <formula>&quot;2015 Acura TLX&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>Product__r.Product_Line_frontend__c</formula>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>VIN</relationshipLabel>
        <relationshipName>VIN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_Process_Date__c</fullName>
        <label>Retail Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Telematic_Flag__c</fullName>
        <formula>Product__r.Telematic_Flag__c</formula>
        <label>Telematic Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmission_Speed__c</fullName>
        <formula>Product__r.Transmission_Speed__c</formula>
        <label>Transmission Speed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wheelbase__c</fullName>
        <formula>Product__r.Wheelbase__c</formula>
        <label>Wheelbase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>XMITN_Code__c</fullName>
        <formula>Product__r.XMITN_Code__c</formula>
        <label>XMITN Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isVINUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVINUpdated</label>
        <type>Checkbox</type>
    </fields>
    <label>VIN/Serial #</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ProductSerialNumber__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MCPE</fullName>
        <columns>ProductSerialNumber__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Line__c</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>MCPE</label>
    </listViews>
    <listViews>
        <fullName>No_Product</fullName>
        <columns>ProductSerialNumber__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>equals</operation>
        </filters>
        <label>No Product</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>